# clade

./: .dockerignore  .gitignore  BROTHER_MAILBOX_SETUP.md  CLAUDE.md  FUTURE.md  GUIDE.md  HEARTH_SETUP.md  README.md  RESEARCH_FINDINGS.md  brothers.py  mailbox_client.py  mailbox_mcp.py  pyproject.toml  server.py  ssh_task.py  terminal.py  test_mailbox.py  test_ssh_task.py  test_terminal_spawner.py  timestamp_utils.py
.github/workflows/: hearth-bridge.yml
deploy/: bootstrap-brother.sh  cluster-tailscale-job.sh  cluster-tailscale-setup.sh  cluster-tailscale-start.sh  conductor-tick.md  conductor-tick.service  conductor-tick.sh  conductor-tick.timer  conductor-workers.yaml  conductor.env.example  ec2.sh  ember.service  hearth.service  jerry-ember.sbatch  mailbox.service  setup.sh
docker/: Dockerfile.test  Dockerfile.test.frontend  Dockerfile.test.hearth  Dockerfile.test.worker  docker-compose.test.yml  entrypoint-worker.sh  test-conductor-workers.yaml
docs/: BROTHER_SETUP.md  FUTURE.md  HEARTH_API.md  MAILBOX_SETUP.md  MESSAGE_TO_JERRY.md  MESSAGE_TO_OPPY.md  QUICKSTART.md  README.md  TASKS.md  WEBAPP.md  architecture.md  cluster-tailscale-setup.md  dev_todo.md  docker-testing.md  github-integration.md  mcp-tools.md  operations.md
examples/: config.yaml.example
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
hearth/: app.py  auth.py  config.py  db.py  models.py  requirements.txt
hooks/: README.md  task_logger.sh
mailbox/: app.py  auth.py  config.py  db.py  models.py
scripts/: backfill_reverse_links.py  test-compose.sh
src/clade/: __main__.py
tests/integration/: test_bidirectional_links.py  test_brother_projects.py  test_card_sync.py  test_cli.py  test_conductor_trigger.py  test_ember.py  test_embers.py  test_kanban.py  test_mailbox_integration.py  test_mcp_server.py  test_members.py  test_morsels.py  test_search.py  test_tasks.py  test_thrums.py
tests/unit/: test_applescript.py  test_bootstrap_cmd.py  (+30 more)
(+109 files in other folders)
